correct arrow image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="whole">
         <!-- <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">-->
         <button class="sidebutton" onclick="plusDivs(-1)">
-            <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">
+            <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div1" class="container">
             <img class="mySlides" src="Wereldinbeeld.jpg" style="width:900px">
