--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <button class="sidebutton" onclick="plusDivs(1)">
-            <img id="rightarrow" src="/My first web application/images/arrow.svg" alt="">
+            <img id="rightarrow" src="arrow.svg" alt="">
         </button>
         <!--<img id="rightarrow" src="/My first web application/images/arrow.svg" alt="">-->
     </div>
