--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,38 +7,346 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="grad">
-    <h1 class="title">Pancser képnézegető</h1>
+    <h1 class="title">COVID-19 pandemic index from 24.03.2020/ járvány index 2020.03.24-től</h1>
     <div class="whole">
         <!-- <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">-->
         <button class="sidebutton" onclick="plusDivs(-1)">
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div1" class="container">
-            <img class="mySlides" src="Wereldinbeeld.jpg" style="width:900px">
+            <img class="mySlides" src="Pandemic index 2020.03.24.png" style="width:1161px">
             <div class="content">
-              <h1>Szép táj 1</h1>
-              <p>Folyó naplementekor</p>
+              <h3>2020.03.24.</h3>
+              <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div2" class="container">
-            <img class="mySlides" src="Wereldinbeeld (1).jpg" style="width:900px">
+            <img class="mySlides" src="Pandemic index 2020.03.25.png" style="width:1161px">
             <div class="content">
-              <h1>Szép táj 2</h1>
-              <p>Naplemente fával</p>
+              <h3>2020.03.25.</h3>
+              <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div3" class="container">
-            <img class="mySlides" src="Wereldinbeeld (2).jpg" style="width:900px">
+            <img class="mySlides" src="Pandemic index 2020.03.26.png" style="width:1161px">
             <div class="content">
-              <h1>Szép táj 3</h1>
-              <p>Havas hegyek</p>
+              <h3>2020.03.26.</h3>
+              <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Wereldinbeeld (3).jpg" style="width:900px">
+            <img class="mySlides" src="Pandemic index 2020.03.27.png" style="width:1161px">
             <div class="content">
-              <h1>Szép táj 4</h1>
-              <p>Téli folyó</p>
+                <h3>2020.03.27.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.03.28.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.03.28.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.03.29.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.03.29.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.03.30.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.03.30.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.03.31.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.03.31.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.01.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.01.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.02.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.02.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.03.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.03.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.04.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.04.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.05.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.05.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.06.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.06.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.07.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.07.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.08.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.08.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.09.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.09.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.10.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.10.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.11.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.11.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.12.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.12.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.13.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.13.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.14.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.14.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.15.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.15.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.16.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.16.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.17.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.17.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.18.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.18.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.19.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.19.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.20.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.20.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.21.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.21.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.22.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.22.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.23.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.23.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.24.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.24.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.25.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.25.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.26.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.26.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.27.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.27.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.28.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.28.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.29.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.29.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.04.30.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.04.30.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.01.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.01.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.02.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.02.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.03.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.03.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.04.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.04.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.05.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.05.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.06.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.06.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.07.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.07.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.08.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.08.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.09.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.09.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Pandemic index 2020.05.10.png" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.10.</h3>
+              <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <button class="sidebutton" onclick="plusDivs(1)">
@@ -46,7 +354,7 @@
         </button>
         <!--<img id="rightarrow" src="/My first web application/images/arrow.svg" alt="">-->
     </div>
-    <div class="thumbs">
+    <!--<div class="thumbs">
         <div class="container2">
             <button id="button1" onclick="showDivs(-2); plusDivs(1);"><img id="img1" class="mySlides2" src="Wereldinbeeld.jpg"></button>
         </div>
@@ -59,7 +367,7 @@
         <div class="container2">
             <button id="button4" onclick="showDivs(-2)"><img id="img4" class="mySlides2" src="Wereldinbeeld (3).jpg"></button>
         </div>
-    </div>
+    </div>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
 </body>
